# PythonPerfc_03_12_24

./: .gitignore
Chap1_SyntaxeAvancee/: ContextManager.ipynb  SyntaxeAvancee.ipynb  fichier.txt  generators.py
Chap2_Concurrence/: DemonstrationThread.ipynb  daemon.py
Chap2_Concurrence/asyncio/: as_completed.py  callback.py  gather.py  method_task.py  simple_create_task.py
Chap2_Concurrence/thread/: threa.py
Chap3_Meta/: Dataclasses.ipynb  Descripteurs.ipynb  Metaclasses.ipynb  SuperEtMRO.ipynb  collections.ipynb
Chap4_Package/demonstration_old_setuptools/eductools/: math_tools.py
Chap4_Package/demonstration_poetry/: pyproject.toml
Module_Importation/: main.py  module.py
