[tool.poetry]
name = "eductools"
version = "0.1.0"
description = "bien le weekend"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

include = [
    {path = "examples/**", format = ["sdist"]}
]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
click = "^8.1.7"
update = "^0.0.1"

[tool.poetry.scripts]
math = "eductools_cli.math_tools_cli:calcul_cli"

[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
